--- a/week01/holygrail.html
+++ b/week01/holygrail.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1 contenteditable>Header</h1>
+        <h2 contenteditable>Header.com</h2>
       </header>
-      <div class="left-sidebar" contenteditable>Left Sidebar</div>
-      <main contenteditable></main>
+      <div class="left-sidebar" contenteditable>Main Navigation</div>
+      <main contenteditable>Main Content Area</main>
       <div class="right-sidebar" contenteditable>Right Sidebar</div>
-      <footer contenteditable>Footer Content</footer>
+      <footer contenteditable>Footer Content - Header.com</footer>
 </body>
 </html>
