--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="David Whitten's WDD 230 - Web Frontend Development - course assignment portal">
+    <meta name="author" content="David Whitten">
+    <title>David Whitten - WDD 230 - Web Frontend Development</title>
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
+</head>
+<body>
+    <header>
+        <img src="images/david-whitten.jpg" alt="David Whitten">
+        <span>David Whitten</span>
+    </header>
 
+    <nav>
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="#">Chamber</a></li>
+            <li><a href="#">Site Plan</a></li>
+            <li><a href="#">Form</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>WDD 230: Web Frontend Development</h1>
+        <section class="card">
+            <h2>Learning Activities</h2>
+            <ul>
+                <!-- Learning activities will be added here -->
+            </ul>
+        </section>
+        <section class="card">
+            <h2>Information</h2>
+            <p>Weather: Placeholder</p>
+            <p>Number of Visits: Placeholder</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; <span id="year"></span> David Whitten, usa,texas</p>
+        <p id="lastModified"></p>
+    </footer>
+
+    <script src="scripts/getDates.js"></script>
+</body>
+</html>
