--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="#">Chamber</a></li>
             <li><a href="#">Form</a></li>
+            <li><a href="week02/design.html">Design</a></li>
         </ul>
     </nav>
     <main>
