--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>David Whitten - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    
 </head>
+    <link rel="icon" href="images/favicon.ico">
 <body>
     <header>
         <img src="images/david-whitten.jpg" alt="David Whitten">
