--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     
+    <link rel="icon" href="images/favicon.ico">
+</head>
 </head>
     <link rel="icon" href="images/favicon.ico">
 <body>
