--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             <p>Weather: Placeholder</p>
             <p>Number of Visits: Placeholder</p>
         </section>
+    <section class="card">
+        <h2>social media</h2>
+        <ul>
+        <li><strong>Title:</strong> David Whitten - WDD 230 - Web Frontend Development</li>
+        <li><strong>Type:</strong> Website</li>
+        <li><strong>Image:</strong> <a href="images/377676_547 (2).jpg">Hometown Image</a></li>
+        <li><strong>URL:</strong> <a href="https://www.texasalmanac.com/places/new-caney">https://new-caney.com</a></li>
+        </ul>
+    </section>
     </main>
     <footer>
         <p>&copy; <span id="year"></span> David Whitten, usa,texas</p>
