--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <ul>
         <li><strong>Title:</strong> David Whitten - WDD 230 - Web Frontend Development</li>
         <li><strong>Type:</strong> Website</li>
-        <li><strong>Image:</strong> <a href="images/377676_547 (2).jpg">Hometown Image</a></li>
+        <li><strong>Image:</strong> <a href="images/3776765472.jpg">Hometown Image</a></li>
         <li><strong>URL:</strong> <a href="https://www.texasalmanac.com/places/new-caney">https://new-caney.com</a></li>
         </ul>
     </section>
