--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="styles/larger.css">
     
     <link rel="icon" href="images/favicon.ico">
+    <meta property="og:title" content="David Whitten - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/3776765472.jpg">
+    <meta property="og:url" content="https://www.texasalmanac.com/places/new-caney">
 </head>
 <body>
     <header>
@@ -39,12 +43,12 @@
             <p>Number of Visits: Placeholder</p>
         </section>
     <section class="card">
-        <h2>social media</h2>
+        <h2>Social Media</h2>
         <ul>
         <li><strong>Title:</strong> David Whitten - WDD 230 - Web Frontend Development</li>
         <li><strong>Type:</strong> Website</li>
-        <li><strong>Image:</strong> <a href="images/3776765472.jpg">Hometown Image</a></li>
-        <li><strong>URL:</strong> <a href="https://www.texasalmanac.com/places/new-caney">https://new-caney.com</a></li>
+        <li><strong>Image:</strong> <a href="images/3776765472.jpg">View Hometown Image</a></li>
+        <li><strong>URL:</strong> <a href="https://www.texasalmanac.com/places/new-caney">https://www.texasalmanac.com/places/new-caney</a></li>
         </ul>
     </section>
     </main>
