--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>Chamber of Commerce</h1>
+        <h1>Montgomery county,TX Chamber of Commerce</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
