--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Chamber of Commerce website for promoting local businesses and events.">
+    <meta name="description" content="department of business website for promoting local businesses and events.">
     <title>Chamber of Commercne</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="Chamber of Commerce">
+    <meta property="og:author" content="David-Whitten">
+    <meta property="og:title" content="department of business">
     <meta property="og:type" content="website">
     <meta property="og:image" content="path/to/image.jpg">
     <meta property="og:url" content="http://yourwebsite.com">
@@ -14,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1>Montgomery county,TX Chamber of Commerce</h1>
+        <h1>Montgomery county,TX department of business</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -29,7 +30,7 @@
             <img src="path/to/hero-image.jpg" alt="Hero Image">
         </section>
         <section class="call-to-action">
-            <a href="#">Join the Chamber of Commerce</a>
+            <a href="#">Join the department of business</a>
         </section>
         <section class="current-events">
             <h2>Current Events</h2>
