--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>David Whitten - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
-    
     <link rel="icon" href="images/favicon.ico">
     <meta property="og:title" content="David Whitten - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
@@ -27,6 +26,7 @@
             <li><a href="chamber/index.html">Chaber</a></li>
             <li><a href="#">For m</a></li>
             <li><a href="week02/design.html">Design</a></li>
+            <li><a href="week03/images/landscape.webp">webp</a></li>
         </ul>
     </nav>
     <main>
