--- a/week03/lazyload.html
+++ b/week03/lazyload.html
@@ -10,19 +10,19 @@
         <h1>Lazy Load</h1>
     </header>
     <main>
-        <img src="https://via.placeholder.com/150" alt="Placeholder Image" loading="lazy">
+        <img src="images/eagle.jpg" alt="Placeholder Image" loading="lazy" width="400" height="600">
         <br>
-        <img src="https://via.placeholder.com/150" alt="Placeholder Image" loading="lazy">
+        <img src="images/employee1.jpg" alt="Placeholder Image" loading="lazy" width="400" height="600">
         <br>
-        <img src="https://via.placeholder.com/150" alt="Placeholder Image" loading="lazy">
+        <img src="images/hero-background.jpg" alt="Placeholder Image" loading="lazy" width="400" height="600">
         <br>
-        <img src="https://via.placeholder.com/150" alt="Placeholder Image" loading="lazy">
+        <img src="images/grid-image2.jpg" alt="Placeholder Image" loading="lazy" width="400" height="600">
         <br>
-        <img src="https://via.placeholder.com/150" alt="Placeholder Image" loading="lazy">
+        <img src="images/rafting-1.jpg" alt="Placeholder Image" loading="lazy" width="400" height="600">
         <br>
-        <img src="https://via.placeholder.com/150" alt="Placeholder Image" loading="lazy">
+        <img src="images/trip2.jpg" alt="Placeholder Image" loading="lazy" width="400" height="600">
         <br>
-        <img src="https://via.placeholder.com/400x600" alt="Placeholder Image" loading="lazy">
+        <img src="images/landscape.webp" alt="Placeholder Image" loading="lazy" width="400" height="600">
     </main>
     <footer>
         <p>&copy; <span id="year"></span> David Whitten, usa,texas</p>
