--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="chamber/index.html">Chaber</a></li>
+            <li><a href="chamber/index.html">Chamber</a></li>
             <li><a href="#">For m</a></li>
             <li><a href="week02/design.html">Design</a></li>
             <li><a href="week03/images/landscape.webp">webp</a></li>
+            <li><a href="week03/lazyload.html">Lazy Load</a></li>
         </ul>
     </nav>
     <main>
