--- a/index.html
+++ b/index.html
@@ -16,47 +16,52 @@
 </head>
 <body>
     <header>
-        <img src="images/david-whitten.jpg" alt="David Whitten">
+        <img src="images/David-whitten.png" alt="David Whitten">
         <span>David Whitten</span>
     </header>
     <nav>
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="chamber/index.html">Chamber</a></li>
-            <li><a href="#">For m</a></li>
-            <li><a href="week02/design.html">Design</a></li>
-            <li><a href="week03/images/landscape.webp">webp</a></li>
-            <li><a href="week03/lazyload.html">Lazy Load</a></li>
+            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="#">Survey</a></li>
         </ul>
     </nav>
+    <div class="hero">
+        <picture>
+            <source srcset="images/hero-houston-temple04.webp" media="(max-width: 400px)">
+            <source srcset="images/hero-houston-temple04.webp" media="(max-width: 960px)">
+            <img src="week03/images/hero-houston-temple04.webp" alt="Houston Temple">
+        </picture>
+        <div class="overlay">Houston Temple</div>
+    </div>
     <main>
         <h1>WDD 230: Web Frontend Development</h1>
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
-                <!-- Learning activities will be added here -->
+                <li>Week 01: <a href="week01/holygrail.html">Grail</a> | <a href="week01/chamber-site-plan.html">Media Query</a></li>
+                <li>Week 02: <a href="week02/design.html">Design</a> | <a href="#">Menu</a> | <a href="#">BOM-25</a></li>
+                <li>Week 03: <a href="#">WebP</a> | <a href="week03/lazyload.html">Lazy</a> | <a href="#">srcset</a> | <a href="#">localStorage</a></li>
+                <li>Week 04: <a href="#">#</a></li>
+                <li>Week 05: <a href="#">#</a></li>
+                <li>Week 06: <a href="#">#</a></li>
             </ul>
         </section>
         <section class="card">
             <h2>Information</h2>
-            <p>Weather: Placeholder</p>
-            <p>Number of Visits: Placeholder</p>
+            <p>☀️ <span id="weather">Loading...</span></p>
+            <p>Visit Count: <span id="visitCount">0</span></p>
         </section>
-    <section class="card">
-        <h2>Social Media</h2>
-        <ul>
-        <li><strong>Title:</strong> David Whitten - WDD 230 - Web Frontend Development</li>
-        <li><strong>Type:</strong> Website</li>
-        <li><strong>Image:</strong> <a href="images/3776765472.jpg">View Hometown Image</a></li>
-        <li><strong>URL:</strong> <a href="https://www.texasalmanac.com/places/new-caney">https://www.texasalmanac.com/places/new-caney</a></li>
-        </ul>
-    </section>
+        <section>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31294.1197993151!2d-95.2162292!3d30.1133521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8647348d5f00f13f%3A0x123456789abcdef!2sNew%20Caney%2C%20Texas!5e0!3m2!1sen!2sus!4v1717171717171" width="100" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
     </main>
     <footer>
-        <p>&copy; <span id="year"></span> David Whitten, usa,texas</p>
-        <p id="lastModified"></p>
+        <p>&copy; 2023 David Whitten, Texas, USA</p>
+        <p>Last Modification: 03/31/2023 13:08:50</p>
     </footer>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/weathervisit.js"></script>
 </body>
 </html>
