--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,29 +34,31 @@
                 <p>Here you can find information about our community, events, and attractions.</p>
                 <div class="photo-gallery">
                     <figure>
-                        <img src="images/photo1.jpg" alt="City Park" loading="lazy">
+                        <img src="images/park.webp" alt="City Park" loading="lazy" style="width: 400px; height: 400px;">
                         <figcaption>City Park</figcaption>
                     </figure>
                     <figure>
-                        <img src="images/photo2.jpg" alt="Local Museum" loading="lazy">
+                        <img src="images/museo.webp" alt="Local Museum" loading="lazy" style="width: 400px; height: 400px;">
                         <figcaption>Local Museum</figcaption>
                     </figure>
                     <figure>
-                        <img src="images/photo3.jpg" alt="Annual Festival" loading="lazy">
+                        <img src="images/Festival.webp" alt="Annual Festival" loading="lazy" style="width: 400px; height: 400px;">
                         <figcaption>Annual Festival</figcaption>
                     </figure>
                     <figure>
-                        <img src="images/photo4.jpg" alt="Farmers Market" loading="lazy">
+                        <img src="images/farmers market.webp" alt="Farmers Market" loading="lazy" style="width: 400px; height: 400px;">
                         <figcaption>Farmers Market</figcaption>
                     </figure>
                     <figure>
-                        <img src="images/photo5.jpg" alt="Music Concert" loading="lazy">
+                        <img src="images/music.webp" alt="Music Concert" loading="lazy" style="width: 400px; height: 400px;">
                         <figcaption>Music Concert</figcaption>
                     </figure>
                     <figure>
-                        <img src="images/photo6.jpg" alt="Art Exhibition" loading="lazy">
+                        <img src="images/art.webp" alt="Art Exhibition" loading="lazy" style="width: 400px; height: 400px;">
                         <figcaption>Art Exhibition</figcaption>
                     </figure>
+                </div>
+            </section>
                 </div>
             </section>
             <aside class="sidebar">
