--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -87,5 +87,6 @@
     </footer>
     <script src="scripts/getDates.js" defer></script>
     <script src="scripts/weathervisit.js" defer></script>
+    <script src="scripts/visttracker.js" defer></script>
 </body>
 </html>
