--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="chamber/index.html">Chamber</a></li>
+            <li><a href="chamber/discover.html">Chamber</a></li>
             <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="#">Survey</a></li>
         </ul>
