--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="David Whitten's WDD 230 - Web Frontend Development - course assignment portal">
+    <meta name="description" content="Discover the Chamber of Commerce, community events, and attractions in New Caney.">
     <meta name="author" content="David Whitten">
-    <title>David Whitten - WDD 230 - Web Frontend Development</title>
+    <title>chamber of Commerce and discover</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="images/favicon.ico">
     <meta property="og:title" content="David Whitten - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/3776765472.jpg">
+    <meta property="og:image" content="images/favicon.ico">
     <meta property="og:url" content="https://www.texasalmanac.com/places/new-caney">
 </head>
 <body>
