--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="images/favicon.ico">
     <meta property="og:title" content="David Whitten - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/3776765472.jpg">
+    <meta property="og:image" content="images/favicon.ico">
     <meta property="og:url" content="https://www.texasalmanac.com/places/new-caney">
 </head>
 <body>
