--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -46,7 +46,7 @@
                         <figcaption>Annual Festival</figcaption>
                     </figure>
                     <figure>
-                        <img src="images/farmers market.webp" alt="Farmers Market" loading="lazy" style="width: 400px; height: 400px;">
+                        <img src="images/farmers-market.webp" alt="Farmers Market" loading="lazy" style="width: 400px; height: 400px;">
                         <figcaption>Farmers Market</figcaption>
                     </figure>
                     <figure>
@@ -57,8 +57,6 @@
                         <img src="images/art.webp" alt="Art Exhibition" loading="lazy" style="width: 400px; height: 400px;">
                         <figcaption>Art Exhibition</figcaption>
                     </figure>
-                </div>
-            </section>
                 </div>
             </section>
             <aside class="sidebar">
@@ -79,7 +77,6 @@
                 <p>Check out our <a href="calendar.html">full calendar</a> for more events.</p>
             </aside>
         </div>
-        
     </main>
     <footer>
         <p>&copy; <span id="currentYear"></span> David Whitten, Texas, USA</p>
