--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li>Week 01: <a href="week01/holygrail.html">Grail</a> | <a href="week01/chamber-site-plan.html">Media Query</a></li>
                 <li>Week 02: <a href="week02/design.html">Design</a> | <a href="#">Menu</a> | <a href="#">BOM-25</a></li>
                 <li>Week 03: <a href="#">WebP</a> | <a href="week03/lazyload.html">Lazy</a> | <a href="#">srcset</a> | <a href="#">localStorage</a></li>
-                <li>Week 04: <a href="#">#</a></li>
+                <li>Week 04: <a href="https://codepen.io/Mdwhitt77gngde/pen/vEYaaZX">classes</a> | <a href="#"></a></li>
                 <li>Week 05: <a href="#">#</a></li>
                 <li>Week 06: <a href="#">#</a></li>
             </ul>
