--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -30,7 +30,7 @@
     </nav>
     <main>
         <section class="hero">
-            <img src="images/hero-image.webp" alt="Community Gathering" loading="lazy" style="width: 100%; height: auto;">
+            <img src="images/commuity.jpg" alt="Community Gathering" loading="lazy" style="width: 100%; height: auto;">
             <div class="cta">
                 <a href="join.html" class="cta-button">Join the Chamber</a>
             </div>
