--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>David Whitten - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="stylesheet" href="styles/dark.css">
     <link rel="icon" href="images/favicon.ico">
     <meta property="og:title" content="David Whitten - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
@@ -18,6 +19,8 @@
     <header>
         <img src="images/David-whitten.png" alt="David Whitten">
         <span>David Whitten</span>
+        <button class="hamburger" id="hamburger">☰</button>
+        <button id="darkModeToggle">🌙</button>
     </header>
     <nav>
         <ul>
@@ -62,6 +65,7 @@
         <p>Last Modification: 03/31/2023 13:08:50</p>
     </footer>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/darkandham.js"></script>
     <script src="scripts/weathervisit.js"></script>
 </body>
 </html>
