--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -25,7 +25,7 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="chamber/index.html">Chamber</a></li>
             <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="#">Survey</a></li>
+            <li><a href="join.html">sign up</a></li>
         </ul>
     </nav>
     <main>
