--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li>Week 02: <a href="week02/design.html">Design</a> | <a href="#">Menu</a> | <a href="#">BOM-25</a></li>
                 <li>Week 03: <a href="#">WebP</a> | <a href="week03/lazyload.html">Lazy</a> | <a href="#">srcset</a> | <a href="#">localStorage</a></li>
                 <li>Week 04: <a href="https://codepen.io/Mdwhitt77gngde/pen/vEYaaZX">classes</a> | <a href="#"></a> | <a href="#"></a> | <a href="#"></a> | <a href="form.html"> form</a></li>
-                <li>Week 05: <a href="https://codepen.io/Mdwhitt77gngde/pen/mydQvep">CSS Pseudo-elements</a></li> | <a href="#">#</a></li> | <a href="#">#</a></li> | <a href="#">#</a></li> | <a href="#">#</a></li>
+                <li>Week 05: <a href="https://codepen.io/Mdwhitt77gngde/pen/mydQvep">CSS Pseudo-elements</a></li> | <a href="">#</a></li> | <a href="week05/prophets.html">The Fetch API</a></li> | <a href="week05/weather.html">Consuming a Weather API</a></li> | <a href="#">#</a></li>
                 <li>Week 06: <a href="#">#</a></li>
             </ul>
         </section>
