--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <h1>WDD 230: Web Frontend Development</h1>
         <section class="card">
             <h2>Learning Activities</h2>
+            <ul id="learningActivities">
+                <h2>Learning Activities</h2>
             <ul>
                 <li>Week 01: <a href="week01/holygrail.html">Grail</a> | <a href="week01/chamber-site-plan.html">Media Query</a></li>
                 <li>Week 02: <a href="week02/design.html">Design</a> | <a href="#">Menu</a> | <a href="#">BOM-25</a></li>
@@ -50,11 +52,15 @@
                 <li>Week 05: <a href="https://codepen.io/Mdwhitt77gngde/pen/mydQvep">CSS Pseudo-elements</a></li> | <a href="">#</a></li> | <a href="week05/prophets.html">The Fetch API</a></li> | <a href="week05/weather.html">Consuming a Weather API</a></li> | <a href="#">#</a></li>
                 <li>Week 06: <a href="#">#</a></li>
             </ul>
+            </ul>
         </section>
-        <section class="card">
-            <h2>Information</h2>
-            <p>☀️ <span id="weather">Loading...</span></p>
-            <p>Visit Count: <span id="visitCount">0</span></p>
+            <section class="card">
+                <h2>Information</h2>
+                <p> <span id="weather">Loading...</span></p>
+                <!-- <p>Temperature: <span id="current-temp">--</span>°F</p> -->
+                <!-- <p>Description: <span id="weather-desc">--</span></p> -->
+                <img id="weather-icon" src="" alt="Weather Icon" style="display: none;">
+                <p>Visit Count: <span id="visitCount">0</span></p>
         </section>
         <section>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31294.1197993151!2d-95.2162292!3d30.1133521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8647348d5f00f13f%3A0x123456789abcdef!2sNew%20Caney%2C%20Texas!5e0!3m2!1sen!2sus!4v1717171717171" width="100" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -67,5 +73,6 @@
     <script src="scripts/getDates.js"></script>
     <script src="scripts/darkandham.js"></script>
     <script src="scripts/weathervisit.js"></script>
+    <script src="week05/scripts/weather.js"></script>
 </body>
 </html>
