--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <h1>WDD 230: Web Frontend Development</h1>
         <section class="card">
             <h2>Learning Activities</h2>
+            <ul id="links-container"></ul>
+
+            <!--
             <ul id="learningActivities">
                 <h2>Learning Activities</h2>
             <ul>
@@ -52,7 +55,7 @@
                 <li>Week 05: <a href="https://codepen.io/Mdwhitt77gngde/pen/mydQvep">CSS Pseudo-elements</a></li> | <a href="">#</a></li> | <a href="week05/prophets.html">The Fetch API</a></li> | <a href="week05/weather.html">Consuming a Weather API</a></li> | <a href="#">#</a></li>
                 <li>Week 06: <a href="#">#</a></li>
             </ul>
-            </ul>
+            -->
         </section>
             <section class="card">
                 <h2>Information</h2>
@@ -74,5 +77,7 @@
     <script src="scripts/darkandham.js"></script>
     <script src="scripts/weathervisit.js"></script>
     <script src="week05/scripts/weather.js"></script>
+    <script src="scripts/links.js"></script>
+
 </body>
 </html>
