--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="images/favicon.ico">
     <meta property="og:title" content="David Whitten - Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/3776765472.jpg">
+    <meta property="og:image" content="images/newcaney-hero.webp">
     <meta property="og:url" content="https://www.texasalmanac.com/places/new-caney">
 </head>
 <body>
