--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,8 +37,11 @@
         <div class="overlay">New Caney, TX</div>
     </div>
     <main>
+        <section class="welcome-message">
+            <h1>Welcome to the Chamber of Commerce</h1>
+            <p>Your gateway to local businesses and community events.</p>
         <section class="call-to-action">
-            <h1>Join the Chamber of Commerce</h1>
+            <h2>Join the Chamber of Commerce</h2>
             <p>Become a part of our community and enjoy exclusive benefits.</p>
             <a href="join.html" class="cta-button">Join Now</a>
         </section>
