--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="David Whitten's WDD 230 - Chamber of Commerce Project">
     <meta name="author" content="David Whitten">
     <title>David Whitten - Chamber of Commerce</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="images/favicon.ico">
