--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="David Whitten's WDD 230 - Chamber of Commerce Project">
+    <meta name="description" content="directory Chamber of Commerce">
     <meta name="author" content="David Whitten">
-    <title>David Whitten - Chamber of Commerce</title>
+    <title>David Whitten - directory Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
