--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -16,15 +16,15 @@
 </head>
 <body>
     <header>
-        <img src="images/David-whitten.png" alt="David Whitten">
+        <img src="images/David-whitten.webp" alt="David Whitten">
         <span>David Whitten, Texas, USA</span>
         <button id="menu" class="hamburger-button">☰</button>
     </header>
     <nav>
         <ul class="navigation">
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="chamber/index.html">Chamber</a></li>
-            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="discover.html">Chamber</a></li>
+            <li><a href="directory.html">Site Plan</a></li>
             <li><a href="join.html">sign up</a></li>
         </ul>
     </nav>
