--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="images/David-whitten.png" alt="David Whitten">
+        <img src="images/David-whitten.webp" alt="David Whitten">
         <button id="menu" aria-label="Menu">&#9776;</button>
         <span>David Whitten</span>
     </header>
