--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="images/David-whitten.png" alt="David Whitten">
+        <img src="images/David-whitten.webp" alt="David Whitten">
         <span>David Whitten</span>
         <button class="hamburger" id="hamburger">☰</button>
         <button id="darkModeToggle">🌙</button>
@@ -21,8 +21,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="chamber/discover.html">Chamber</a></li>
-            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="discover.html">Chamber</a></li>
+            <li><a href="directory.html">Site Plan</a></li>
             <li><a href="#">Survey</a></li>
         </ul>
     </nav>
