--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -19,23 +19,23 @@
         <p>Stylesheet failed to load. Please ensure the file "normalize.css" is present in the "styles" directory.</p>
     </noscript>
     -->
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/larger.css" />
-    <link rel="icon" href="images/favicon.ico" />
-    <meta property="og:title" content="David Whitten - Chamber of Commerce" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/newcaney-hero.webp" />
-    <meta property="og:url" content="https://www.texasalmanac.com/places/new-caney" />
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="images/favicon.ico">
+    <meta property="og:title" content="David Whitten - Chamber of Commerce">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/newcaney-hero.webp">
+    <meta property="og:url" content="https://www.texasalmanac.com/places/new-caney">
     <script>
         function handleStylesheetError(fileName) {
-            console.error(`Stylesheet "${fileName}" failed to load.`);
+            console.error(`Stylesheet "${fileName}" failed to load. `);
             alert(`Critical stylesheet "${fileName}" is missing or failed to load. Please check your setup.`);
         }
     </script>
 </head>
 <body>
     <header>
-        <img src="images/David-whitten.webp" alt="David Whitten" />
+        <img src="images/David-whitten.webp" alt="David Whitten">
         <button id="menu" aria-label="Menu">&#9776;</button>
         <span>David Whitten</span>
     </header>
@@ -49,9 +49,9 @@
     </nav>
     <div class="hero">
         <picture>
-            <source srcset="images/newcaney-hero-small.webp" media="(max-width: 400px)" />
-            <source srcset="images/newcaney-hero-medium.webp" media="(max-width: 960px)" />
-            <img src="images/newcaney-hero.webp" alt="New Caney, TX" class="hero-image" />
+            <source srcset="images/newcaney-hero-small.webp" media="(max-width: 400px)">
+            <source srcset="images/newcaney-hero-medium.webp" media="(max-width: 960px)">
+            <img src="images/newcaney-hero.webp" alt="New Caney, TX" class="hero-image">
         </picture>
         <div class="overlay">New Caney, TX</div>
     </div>
