--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,6 +59,11 @@
             <h2>Weather</h2>
             <p>Check out the current weather in our area.</p>
             <div id="weather-placeholder">Weather data will be displayed here.</div>
+                <p> <span id="weather">Loading...</span></p>
+                <!-- <p>Temperature: <span id="current-temp">--</span>°F</p> -->
+                <!-- <p>Description: <span id="weather-desc">--</span></p> -->
+                <img id="weather-icon" src="" alt="Weather Icon" style="display: none;">
+                <p>Visit Count: <span id="visitCount">0</span></p>
         </section>
         <section class="company-spotlights">
             <h2>Company Spotlights</h2>
@@ -70,6 +75,10 @@
                 <h3>XYZ Services</h3>
                 <p>Committed to excellence in customer service.</p>
             </div>
+        </section>
+    </section>
+        <section>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31294.1197993151!2d-95.2162292!3d30.1133521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8647348d5f00f13f%3A0x123456789abcdef!2sNew%20Caney%2C%20Texas!5e0!3m2!1sen!2sus!4v1717171717171" width="100" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
     </main>
     <footer>
